--- a/NoelSkum/NoelSkum.CSharp.Editor.csproj
+++ b/NoelSkum/NoelSkum.CSharp.Editor.csproj
@@ -100,5 +100,11 @@
   <ItemGroup>
     <Compile Include="Assets\Scripts\Editor\InventoryIconMaker.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Assets\Standard Assets\Effects\ToonShading\Shaders\ToonBasic.shader" />
+    <None Include="Assets\Standard Assets\Effects\ToonShading\Shaders\ToonBasicOutline.shader" />
+    <None Include="Assets\Standard Assets\Effects\ToonShading\Shaders\ToonLit.shader" />
+    <None Include="Assets\Standard Assets\Effects\ToonShading\Shaders\ToonLitOutline.shader" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\SyntaxTree\UnityVS\2013\UnityVS.CSharp.targets" />
 </Project>
