--- a/NoelSkum/NoelSkum.CSharp.csproj
+++ b/NoelSkum/NoelSkum.CSharp.csproj
@@ -76,5 +76,11 @@
     <Compile Include="Assets\Scripts\Gameplay\ObjectMenuOption.cs" />
     <Compile Include="Assets\Scripts\Gameplay\Player.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Assets\Standard Assets\Effects\ToonShading\Shaders\ToonBasic.shader" />
+    <None Include="Assets\Standard Assets\Effects\ToonShading\Shaders\ToonBasicOutline.shader" />
+    <None Include="Assets\Standard Assets\Effects\ToonShading\Shaders\ToonLit.shader" />
+    <None Include="Assets\Standard Assets\Effects\ToonShading\Shaders\ToonLitOutline.shader" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\SyntaxTree\UnityVS\2013\UnityVS.CSharp.targets" />
 </Project>
