--- a/NoelSkum/NoelSkum.CSharp.Editor.csproj
+++ b/NoelSkum/NoelSkum.CSharp.Editor.csproj
@@ -99,6 +99,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\Scripts\Editor\InventoryIconMaker.cs" />
+    <Compile Include="Assets\Scripts\Terrain\Editor\PlanetDataGenerator.cs" />
+    <Compile Include="Assets\Scripts\Terrain\Editor\Test.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\Standard Assets\Effects\ToonShading\Shaders\ToonBasic.shader" />
