Refactor all non-indexer integer triplets (iPos, jPos, kPos) with a Coordinates structure. Avoid using side-effects when requesting position computation for Panels or Items.

--- a/NoelSkum/NoelSkum.CSharp.csproj
+++ b/NoelSkum/NoelSkum.CSharp.csproj
@@ -78,6 +78,7 @@
     <Compile Include="Assets\Scripts\Terrain\Chunck.cs" />
     <Compile Include="Assets\Scripts\Terrain\HeightMapLoader.cs" />
     <Compile Include="Assets\Scripts\Terrain\RandomSeed.cs" />
+    <Compile Include="Assets\Scripts\Tools\Coordinates.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\Standard Assets\Effects\ToonShading\Shaders\ToonBasic.shader" />
